--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:openDrawer="start">
+        tools:openDrawer="start"
+>
 
     <include
             android:id="@+id/app_bar_main"
@@ -16,6 +17,7 @@
             android:layout_height="match_parent"/>
 
     <com.google.android.material.navigation.NavigationView
+            style="@style/AppTheme"
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
