--- a/app/src/main/res/layout/fragment_grafi.xml
+++ b/app/src/main/res/layout/fragment_grafi.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:paddingBottom="50dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:background="#FFFFFF">
+                android:layout_height="match_parent" android:background="#FFFFFF"
+                android:exported="true"
+>
 
     <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart1"
