--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,5 @@
     </style>
     <style name="Theme.Vremenarapp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="Theme.Vremenarapp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 </resources>
