--- a/app/src/main/res/layout/fragment_grafi.xml
+++ b/app/src/main/res/layout/fragment_grafi.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:paddingBottom="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" android:background="#FFFFFF"
                 android:exported="true"
 >
 
     <com.github.mikephil.charting.charts.LineChart
+            android:paddingBottom="50dp"
             android:id="@+id/chart1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:visibility="gone"
+            android:layout_width="399dp"
+            android:layout_height="644dp"
 
-    />
+            android:layout_marginTop="7dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
+            android:layout_marginBottom="80dp" android:visibility="visible" android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"/>
+    <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="314dp"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_alignParentStart="true" android:layout_marginStart="11dp"
+            android:layout_alignParentBottom="true" android:layout_marginBottom="6dp"/>
 
 </RelativeLayout>
