--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,50 +9,116 @@
 
 >
 
-    <TextView
-            android:layout_width="110dp"
-            android:layout_height="25dp" android:id="@+id/text_svetloba"
+    <ImageView
+            android:src="@drawable/nh3"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/nh3"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="244dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="143dp"
-            android:textSize="20sp"
+            android:layout_marginTop="540dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:srcCompat="@drawable/nh3"/>
+    <TextView
+            android:layout_width="185dp"
+            android:layout_height="50dp" android:id="@+id/text_nh3"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="544dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="150dp"
+            android:textSize="34sp"
             android:textStyle="bold"/>
     <TextView
-            android:text="Svetloba:"
-            android:layout_width="95dp"
-            android:layout_height="30dp" android:id="@+id/textView2"
+            android:text="NH3:"
+            android:layout_width="80dp"
+            android:layout_height="50dp" android:id="@+id/textView7"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="244dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="48dp" android:textSize="20sp"/>
+            android:layout_marginTop="544dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="68dp" android:textSize="34sp"/>
+    <ImageView
+            android:src="@drawable/redu"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/redu"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="476dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:srcCompat="@drawable/redu"/>
+    <TextView
+            android:layout_width="185dp"
+            android:layout_height="50dp" android:id="@+id/text_redukcije"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="480dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="225dp"
+            android:textSize="34sp"
+            android:textStyle="bold"/>
+    <TextView
+            android:text="Redukcije:"
+            android:layout_width="155dp"
+            android:layout_height="50dp" android:id="@+id/textView6"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="480dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="68dp" android:textSize="34sp"/>
+    <ImageView
+            android:src="@drawable/barometersimple"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/barometer"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="280dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:srcCompat="@drawable/barometer"/>
     <ImageView
             android:src="@drawable/sun"
-            android:layout_width="25dp"
-            android:layout_height="25dp" android:id="@+id/sun"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/sun"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="244dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="348dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:srcCompat="@drawable/sun"/>
     <TextView
-            android:layout_width="100dp"
-            android:layout_height="25dp" android:id="@+id/text_pritisk"
+            android:text="Oxidacije:"
+            android:layout_width="150dp"
+            android:layout_height="50dp" android:id="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="302dp"
-            android:textSize="20sp"
+            android:layout_marginTop="416dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="68dp" android:textSize="34sp"/>
+    <TextView
+            android:layout_width="190dp"
+            android:layout_height="50dp" android:id="@+id/text_oxidacije"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="416dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="220dp"
+            android:textSize="34sp"
+            android:textStyle="bold"/>
+    <ImageView
+            android:src="@drawable/oxid"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/oxid"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="412dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:srcCompat="@drawable/oxid"/>
+    <TextView
+            android:text="Svetloba:"
+            android:layout_width="140dp"
+            android:layout_height="50dp" android:id="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="348dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="68dp" android:textSize="34sp"/>
+    <TextView
+            android:layout_width="190dp"
+            android:layout_height="50dp" android:id="@+id/text_svetloba"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="348dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="208dp"
+            android:textSize="34sp"
+            android:textStyle="bold"/>
+    <TextView
+            android:layout_width="230dp"
+            android:layout_height="50dp" android:id="@+id/text_pritisk"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="282dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="178dp"
+            android:textSize="34sp"
             android:textStyle="bold"/>
     <TextView
             android:text="Pritisk:"
-            android:layout_width="70dp"
-            android:layout_height="30dp" android:id="@+id/textView5"
+            android:layout_width="108dp"
+            android:layout_height="50dp" android:id="@+id/textView5"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="232dp" android:textSize="20sp"/>
-    <ImageView
-            android:src="@drawable/barometersimple"
-            android:layout_width="25dp"
-            android:layout_height="25dp" android:id="@+id/barometer"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="200dp" app:srcCompat="@drawable/barometer"/>
+            android:layout_marginTop="282dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="70dp" android:textSize="34sp"/>
     <TextView
             android:id="@+id/text_lastUpdate"
             android:layout_width="396dp"
@@ -76,24 +142,24 @@
             android:textStyle="bold"/>
     <ImageView
             android:src="@drawable/dropletthick"
-            android:layout_width="25dp"
-            android:layout_height="25dp" android:id="@+id/droplet"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:id="@+id/droplet"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:srcCompat="@drawable/dropletthick"/>
     <TextView
             android:text="Vlaga:"
-            android:layout_width="65dp"
-            android:layout_height="30dp" android:id="@+id/textView4"
+            android:layout_width="100dp"
+            android:layout_height="50dp" android:id="@+id/textView4"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="48dp" android:textSize="20sp"/>
+            android:layout_marginStart="66dp" android:textSize="34sp"/>
     <TextView
-            android:layout_width="75dp"
-            android:layout_height="25dp" android:id="@+id/text_vlaga"
+            android:layout_width="240dp"
+            android:layout_height="50dp" android:id="@+id/text_vlaga"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="115dp"
-            android:textSize="20sp"
+            android:layout_marginStart="166dp"
+            android:textSize="34sp"
             android:textStyle="bold"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
