--- a/app/src/main/res/layout/dejanske_nastavitve.xml
+++ b/app/src/main/res/layout/dejanske_nastavitve.xml
@@ -19,11 +19,31 @@
             android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/ic__oneaccount"
     />
+
     <TextView
             android:text="ImeInPriimek"
-            android:layout_width="362dp"
-            android:layout_height="73dp" android:id="@+id/hi"
-            android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp" android:textSize="20sp" android:textAlignment="center"/>
+            android:layout_width="286dp"
+            android:layout_height="52dp" android:id="@+id/hi"
+            android:textSize="20sp" android:textAlignment="center"
+            android:layout_marginTop="236dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"/>
+    <androidx.cardview.widget.CardView
+            android:layout_width="155dp"
+            android:layout_height="155dp"
+            app:cardCornerRadius="250dp"
+            app:cardBackgroundColor="@color/black" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="56dp"
+            android:layout_marginStart="128dp" android:id="@+id/card">
+        <androidx.cardview.widget.CardView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:cardCornerRadius="250dp"
+                android:layout_gravity="center" app:cardBackgroundColor="#ffffff">
+
+            <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="155dp" tools:src="@tools:sample/avatars" android:id="@+id/profile_pic"
+                    android:baselineAlignBottom="false"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
