--- a/app/src/main/res/layout/dejanske_nastavitve.xml
+++ b/app/src/main/res/layout/dejanske_nastavitve.xml
@@ -14,36 +14,44 @@
             android:text="Sign in with One Account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
             android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/ic__oneaccount"
-    />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"/>
 
     <TextView
-            android:text="ImeInPriimek"
+            android:text="ImeInPriimekNotAllowed"
             android:layout_width="286dp"
             android:layout_height="52dp" android:id="@+id/hi"
             android:textSize="20sp" android:textAlignment="center"
-            android:layout_marginTop="236dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/card"/>
     <androidx.cardview.widget.CardView
-            android:layout_width="155dp"
-            android:layout_height="155dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             app:cardCornerRadius="250dp"
-            app:cardBackgroundColor="@color/black" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="56dp"
-            android:layout_marginStart="128dp" android:id="@+id/card">
-        <androidx.cardview.widget.CardView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="250dp"
-                android:layout_gravity="center" app:cardBackgroundColor="#ffffff">
+            android:layout_gravity="center" app:cardBackgroundColor="#ffffff"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp" android:id="@+id/card">
 
-            <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="155dp" tools:src="@tools:sample/avatars" android:id="@+id/profile_pic"
-                    android:baselineAlignBottom="false"/>
-        </androidx.cardview.widget.CardView>
+        <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp" tools:src="@tools:sample/avatars" android:id="@+id/profile_pic"
+                android:baselineAlignBottom="false"
+        />
     </androidx.cardview.widget.CardView>
+
+    <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="314dp"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="300dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
