--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -13,12 +13,13 @@
             android:background="@drawable/side_nav_bar"
             app:popupTheme="@style/Theme.Vremenarapp.PopupOverlay"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
-    <ImageView
-            android:layout_width="50dp"
-            android:layout_height="51dp" app:srcCompat="@android:drawable/ic_media_rew"
-            android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
 
+    <ImageView
+            android:layout_width="55dp"
+            android:layout_height="55dp" app:srcCompat="@drawable/ic_chevron_left_1"
+            android:id="@+id/nazaj" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="4dp"/>
     <FrameLayout
             android:id="@+id/settings"
             android:layout_width="match_parent"
@@ -31,7 +32,8 @@
             android:text="Nastavitve"
             android:layout_width="207dp"
             android:layout_height="32dp" android:id="@+id/textView8"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="68dp" android:textSize="24sp" android:textColor="#FFFFFF"/>
+            android:textSize="24sp" android:textColor="#FFFFFF"
+            android:layout_marginStart="60dp" app:layout_constraintTop_toTopOf="@+id/nazaj"
+            android:layout_marginTop="11dp" app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
