--- a/app/src/main/res/layout/dejanske_nastavitve.xml
+++ b/app/src/main/res/layout/dejanske_nastavitve.xml
@@ -45,7 +45,7 @@
     </androidx.cardview.widget.CardView>
 
     <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/spinner_postaje"
             android:layout_width="314dp"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
@@ -54,4 +54,11 @@
             android:layout_alignParentBottom="true" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="300dp"/>
+    <Button
+            android:text="Odjavi se"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/odjava_gumb"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="84dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_postaje"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
