--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,11 @@
                 android:title="@string/menu_grafi"
                 android:color="@color/black"
         />
+        <item
+                android:id="@+id/primerjava"
+                android:icon="@drawable/primerjava"
+                android:title="@string/primerjava_podatkov"
+                android:color="@color/black"
+        />
     </group>
 </menu>
