--- a/app/src/main/res/layout/fragment_grafi.xml
+++ b/app/src/main/res/layout/fragment_grafi.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:background="#FFFFFF"
                 android:exported="true"
 >
@@ -21,6 +21,7 @@
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_alignParentStart="true" android:layout_marginStart="11dp"
-            android:layout_alignParentBottom="true" android:layout_marginBottom="6dp"/>
+            android:layout_alignParentBottom="true" android:layout_marginBottom="6dp"
+            tools:ignore="SpeakableTextPresentCheck"/>
 
 </RelativeLayout>
