--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,14 +70,14 @@
     <TextView
             android:text="Redukcije:"
             android:layout_width="170dp"
-            android:layout_height="50dp" android:id="@+id/textView6"
+            android:layout_height="50dp" android:id="@+id/redukcije"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="468dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp" android:textSize="34sp"/>
     <TextView
             android:text="Pritisk:"
             android:layout_width="115dp"
-            android:layout_height="50dp" android:id="@+id/textView5"
+            android:layout_height="50dp" android:id="@+id/pritisk"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="268dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp" android:textSize="34sp"/>
@@ -91,7 +91,7 @@
     <TextView
             android:text="Oxidacije:"
             android:layout_width="164dp"
-            android:layout_height="50dp" android:id="@+id/textView3"
+            android:layout_height="50dp" android:id="@+id/oxidacije"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="404dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp" android:textSize="34sp"/>
@@ -114,7 +114,7 @@
     <TextView
             android:text="NH3:"
             android:layout_width="85dp"
-            android:layout_height="50dp" android:id="@+id/textView7"
+            android:layout_height="50dp" android:id="@+id/nh3napis"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="532dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp" android:textSize="34sp"/>
@@ -136,7 +136,7 @@
     <TextView
             android:text="Svetloba:"
             android:layout_width="155dp"
-            android:layout_height="50dp" android:id="@+id/textView2"
+            android:layout_height="50dp" android:id="@+id/svetloba"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="336dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp" android:textSize="34sp"/>
@@ -158,7 +158,7 @@
     <TextView
             android:text="Vlaga:"
             android:layout_width="105dp"
-            android:layout_height="50dp" android:id="@+id/textView4"
+            android:layout_height="50dp" android:id="@+id/vlaga"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="56dp" android:textSize="34sp"/>
